client/src/components/Characters/CharacterCard/character_card.css
/****************************************/

.this-is-here-to-prevent-a-heroku-bug {
  width: 100%;
}

.character_card_header {
  background-color: var(--primary-light);
  color: var(--secondary);
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 25px;
  font-family: var(--font-display-text);
  height: 47px;
}

.character_card {
  display: flex;
  flex-flow: column;
  height: 100%;
  width: 100%;
}



.card_header_name_wrapper {
  display: flex;
  justify-content: center;
}

.card_first,
.card_last {
  height: 35px;
  margin: 0 5px;
  min-width: 20%;
  text-align: center;
}

.character_card_body,
.modify_card_body {
  word-wrap: break-word;
  background-size: cover;
  background-repeat: no-repeat;
  /* background-size: 100% 100%; */
  background-position-x: center;
  background-position-y: top;
  background-color: var(--background-color);
  display: flex;
  flex-flow: column;
}

.character_card_body {
  height: 100%;
}

.modify_card_body {
  height: 60vh;
  overflow: hidden;
  width: 100%;
}

.modify_card_img {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  
}

.character_card_space,
.modify_card_space {
  width: 100%;
  position: relative;
  top: 0;
  left: 0;
}

.character_card_space {
  height: 70%;
}

.character_card_dropzone {
  height: 60%;
}

.modify_card_text {
  background-color: var(--background-color);
  position: relative;
  bottom: -70%;
  left: 0;
}


/*****************  CharacterTraits  ****************/

.character_traits {
  display: flex;
  flex-flow: column;
  justify-content: space-evenly;
  height: 100%;
}

.card_trait {
  display: grid;
  grid-template-columns: 25% 1fr;
}

.card_trait_type {
  font-size: 85%;
  font-weight: bold;
  margin-right: 10px;
  text-align: end;
  grid-column: 1 / span 1;
  grid-row: 2 / span 1;
}

.card_trait_name {
  font-size: 13.5px;
  margin-left: 10px;
  grid-column: 2 / span 1;
  grid-row: 2 / span 1;
}

.character_bio {
  grid-column: 1 / span 2;
  grid-row: 2 / span 1;
}


/*********************  Media Queries  *****************/

@media screen and (orientation: portrait) {
  .modify_card_body {
    height: 45vh;
  }
}
@media screen and (orientation: portrait) and (max-device-width: 1000px) {
  .card_trait {
    font-size: 1.5rem;
  }
  
}

@media screen and (max-device-height: 500px) and (orientation: landscape) {
  
}

